--- a/_includes/weather_satellite.html
+++ b/_includes/weather_satellite.html
@@ -4,7 +4,11 @@ http://www.goes.noaa.gov/sohemi/
 <div id="weather_block">
     <div class="weather_satellite">
         <div class="image">
+            {% if site.development == true %}
+            <img src="/images/invisible.png" width="100%" height="auto"/>
+            {% else %}
             <img src="http://www.goes.noaa.gov/sohemi/PHILIR.JPG" width="100%" height="auto"/>
+            {% endif %}
             <p class="attribution">Data from Himawari-8</p>
         </div>
     </div>
