--- a/_sass/mixin.scss
+++ b/_sass/mixin.scss
@@ -127,6 +127,35 @@
           border-radius: $radius;
 }
 
+@mixin border-top-radius($radius) {
+  -webkit-border-top-right-radius: $radius;
+          border-top-right-radius: $radius;
+   -webkit-border-top-left-radius: $radius;
+           border-top-left-radius: $radius;
+                  background-clip: padding-box;
+}
+@mixin border-right-radius($radius) {
+  -webkit-border-bottom-right-radius: $radius;
+          border-bottom-right-radius: $radius;
+     -webkit-border-top-right-radius: $radius;
+             border-top-right-radius: $radius;
+                     background-clip: padding-box;
+}
+@mixin border-bottom-radius($radius) {
+  -webkit-border-bottom-right-radius: $radius;
+          border-bottom-right-radius: $radius;
+   -webkit-border-bottom-left-radius: $radius;
+           border-bottom-left-radius: $radius;
+                     background-clip: padding-box;
+}
+@mixin border-left-radius($radius) {
+  -webkit-border-bottom-left-radius: $radius;
+          border-bottom-left-radius: $radius;
+     -webkit-border-top-left-radius: $radius;
+             border-top-left-radius: $radius;
+                    background-clip: padding-box;
+}
+
 @mixin sidebar_component_label {
     @include set_font($font_label, $font_size_label, $color_sidebar_label, bold);
     @include max-screen(720px) {
