--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -412,13 +412,18 @@ section {
         }
         h2 {
             @include component_entry_heading($font_sidebar_entry_title, $font_size_sidebar_entry_title, $color_sidebar_entry_title);
+            line-height: $font_line_height_sidebar_entry_title;
             a {
                 @include component_entry_heading_link($font_sidebar_entry_title, $font_size_sidebar_entry_title, $color_sidebar_entry_title);
             }
         }
         
         p, li, dl, a {
-            @include set_font($font_sidebar, $font_size_sidebar, $color_sidebar);
+            @include set_font($font_sidebar_entry_text, $font_size_sidebar_entry_text, $color_sidebar_entry_text);
+            line-height: $font_line_height_sidebar_text;
+            @include max-screen(720px) {
+                line-height: $font_line_height_sidebar_text + 2;
+            }
             text-align: left;
         }
 
@@ -427,7 +432,6 @@ section {
 
             li {
                 padding: 0px;
-                line-height: $font_size_sidebar + 4;
                 a {
                     border-bottom: none;
                     &:hover {
@@ -565,13 +569,11 @@ section.column_left_sidebar {
         div.quote {
             p {
                 @include compact;
-                @include set_font($font_quote, $font_size_quote, $color_quote_text);
+                @include set_font($font_quote, $font_size_quote, $color_quote_text, normal, normal);
                 @include max-screen(720px) {
                     font-size: $font_size_quote + 1;
                 }
                 line-height: $font_line_height_quote;
-                letter-spacing: 0.25px;
-                
                 i.fa-quote-left {
                     color: lighten($color_sidebar_label, 15%);
                 }
@@ -597,6 +599,7 @@ section.column_left_sidebar {
                     }
                     &.context {
                         color: lighten($color_quote_author, 15%);
+                        padding-top: 2px;
                     }
                 }
             }
@@ -638,6 +641,8 @@ section.column_left_sidebar {
                 h2 {
                     @include component_entry_heading($font_announcement_title, $font_size_announcement_title, $color_announcement_title);
                     text-transform: uppercase;
+                    letter-spacing: 0.2px;
+                    word-spacing: 0.175em;
                     @include max-screen(720px) {
                         font-size: $font_size_announcement_title + 1;
                     }
@@ -648,11 +653,12 @@ section.column_left_sidebar {
         
             p, li, a {
                 @include set_font($font_announcement_text, $font_size_announcement_text, $color_announcement_text);
+                line-height: $font_line_height_announcement_text;
+                @include max-screen(720px) {
+                    line-height: $font_line_height_announcement_text + 2;
+                }
                 &.date {
                     @include set_font($font_announcement_date, $font_size_announcement_date, $color_announcement_date);
-                }
-                @include max-screen(720px) {
-                    line-height: $font_size_announcement_text + 3;
                 }
             }
         }
@@ -673,7 +679,7 @@ section.column_left_sidebar {
     // to align the first news bit "title" with the top of the scroll div.
     // This means we have to offset the news bit div.
     div.newsbits {
-        @include sidebar_component_scroll_internal(250px);
+        @include sidebar_component_scroll_internal(270px);
 
         div.newsbit {
             @include component_entry;
@@ -749,6 +755,7 @@ section.hub_column_main {
     }
     h2 {
         @include component_entry_heading($font_news_title, $font_size_news_title, $color_news_title);
+        line-height: $font_line_height_news_title;
         a {
             @include component_entry_heading_link($font_news_title, $font_size_news_title, $color_news_title);
         }
@@ -758,7 +765,7 @@ section.hub_column_main {
         @include set_font($font_news_text, $font_size_news_text, $color_news_text);
         line-height: $font_line_height_news_text;
         @include max-screen(720px) {
-            line-height: $font_line_height_news_text + 3;
+            line-height: $font_line_height_news_text + 2;
         }
         &.date {
             @include set_font($font_news_date, $font_size_news_date, $color_news_date);
@@ -1011,7 +1018,7 @@ section.post_column_main {
         
         line-height: $font_line_height_page_text;
         @include max-screen(720px) {
-            line-height: $font_line_height_page_text + 3;
+            line-height: $font_line_height_page_text + 2;
         }
         
         @media print {
@@ -1382,6 +1389,7 @@ section.column_right_sidebar {
                     // <h2> tags used for 'no related posts'
                     // while <a> for the actual heading and link
                     font-weight: normal;
+                    line-height: $font_line_height_related_post_title;
                     a {
                         @include component_entry_heading_link($font_related_post_title, $font_size_related_post_title, $color_news_title);
                     }
@@ -1392,13 +1400,17 @@ section.column_right_sidebar {
             
             p {
                 @include max-screen(720px) {
-                    line-height: $font_size_related_post_excerpt + 3;
+                    line-height: $font_size_related_post_excerpt + 2;
                 }
                 &.date {
                     @include set_font($font_related_post_date, $font_size_related_post_date, $color_news_text);
                 }
                 &.excerpt {
                     @include set_font($font_related_post_excerpt, $font_size_related_post_excerpt, $color_news_text);
+                    line-height: $font_line_height_related_post_excerpt;
+                    @include max-screen(720px) {
+                        line-height: $font_line_height_related_post_excerpt + 2;
+                    }
                 }
             }
         }
@@ -1440,6 +1452,8 @@ section.column_right_sidebar {
             h2 {
                 @include component_entry_heading($font_info_title, $font_size_info_title, $color_info_title);
                 text-transform: uppercase;
+                letter-spacing: 0.2px;
+                word-spacing: 0.175em;
             }
 
             p.date {
@@ -1460,13 +1474,15 @@ section.column_right_sidebar {
             @include component_entry_content;
             p, li, a {
                 @include set_font($font_info_text, $font_size_info_text, $color_info_text);
+                
                 em {
                     font-style: italic;
                 }
             }
             p {
+                line-height: $font_line_height_info_text;
                 @include max-screen(720px) {
-                    line-height: $font_size_news_text + 3;
+                    line-height: $font_line_height_info_text + 2;
                 }
             }
         }
