--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -76,11 +76,12 @@ $font_size_label:               11px;
 // Announcement
 $font_announcement_title:               $font_label;
 $font_size_announcement_title:          11px;
+$font_line_height_announcement_title:   13px;
 $font_announcement_date:                $font_serif_thin;
-$font_size_announcement_date:           12px;
+$font_size_announcement_date:           $font_size_default;
 $font_announcement_text:                $font_serif_thin;
-$font_size_announcement_text:           12px;
-$font_line_height_announcement_text:    15px;
+$font_size_announcement_text:           $font_size_default;
+$font_line_height_announcement_text:    $font_line_height_default;
 
 // Info
 $font_info_title:               $font_label;
@@ -119,7 +120,7 @@ $font_line_height_news_text:    $font_line_height_default;
 // Sidebar
 $font_sidebar_entry_title:              $font_label;
 $font_size_sidebar_entry_title:         14px;
-$font_line_height_sidebar_entry_title:  15px;
+$font_line_height_sidebar_entry_title:  16px;
 $font_sidebar_entry_text:               $font_default;
 $font_size_sidebar_entry_text:          $font_size_default;
 $font_line_height_sidebar_text:         $font_line_height_default;
