Fix font line heights for mobile devices

--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -79,6 +79,7 @@ $font_size_announcement_title:          11px;
 $font_line_height_announcement_title:   13px;
 $font_announcement_date:                $font_serif_thin;
 $font_size_announcement_date:           $font_size_default;
+$font_line_height_announcement_date:    $font_line_height_default;
 $font_announcement_text:                $font_serif_thin;
 $font_size_announcement_text:           $font_size_default;
 $font_line_height_announcement_text:    $font_line_height_default;
@@ -131,6 +132,7 @@ $font_size_related_post_title:          14px;
 $font_line_height_related_post_title:   16px;
 $font_related_post_date:                $font_default;
 $font_size_related_post_date:           $font_size_default;
+$font_line_height_related_post_date:    $font_line_height_default;
 $font_related_post_excerpt:             $font_default;
 $font_size_related_post_excerpt:        $font_size_default;
 $font_line_height_related_post_excerpt: $font_line_height_default;
