Float right sidebar to the right in screens <= 768  and >= 720

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1368,6 +1368,12 @@ section.column_right_sidebar {
     @media print {
         margin: 0px;
     }
+    @include max-screen(768px) {
+        float: right;
+    }
+    @include max-screen(720px) {
+        float: left;
+    }
 }
 
 #related_posts_block,
