--- a/_includes/weather_satellite.html
+++ b/_includes/weather_satellite.html
@@ -7,7 +7,7 @@ http://www.goes.noaa.gov/sohemi/
             {% if site.development == true %}
             <img src="/images/invisible.png" width="100%" height="auto"/>
             {% else %}
-            <img src="http://www.goes.noaa.gov/sohemi/PHILIR.JPG" width="100%" height="auto"/>
+            <img src="{{ site.data.links.weather_satellite_image }}" width="100%" height="auto"/>
             {% endif %}
             <p class="attribution">Data from Himawari-8</p>
         </div>
