Fix font import syntax

--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -9,7 +9,7 @@
 //@import url("https://fonts.googleapis.com/css?family=Droid+Serif");
 
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
-@import url("https://fonts.googleapis.com/css?family='Liberation+Serif':normal,italic,normalitalic,bolditalic");
+@import url("https://fonts.googleapis.com/css?family=Liberation+Serif:normal,italic,normalitalic,bolditalic");
 
 $font_serif:                Palatino, "Palatino Linotype", "Times New Roman", Georgia, Times, serif;
 $font_serif_thin:           "Liberation Serif", Palatino, "Palatino Linotype", "Times New Roman", Georgia, Times, serif;
