Add component label on satellite image

--- a/_includes/weather_satellite.html
+++ b/_includes/weather_satellite.html
@@ -2,6 +2,7 @@
 http://www.goes.noaa.gov/sohemi/
 {% endcomment %}
 <div id="weather_block">
+    <h1>Satellite Image</h1>
     <div class="weather_satellite">
         <div class="image">
             {% if site.development == true %}
