--- a/_includes/weather_satellite.html
+++ b/_includes/weather_satellite.html
@@ -10,7 +10,7 @@ http://www.goes.noaa.gov/sohemi/
             {% else %}
             <img src="{{ site.data.links.weather_satellite_image }}" width="100%" height="auto"/>
             {% endif %}
-            <p class="attribution">Data from Himawari-8</p>
+            <p class="attribution">Data from Himawari-8 via PAGASA</p>
         </div>
     </div>
 </div>
