--- a/_layouts/hub.html
+++ b/_layouts/hub.html
@@ -115,11 +115,11 @@ layout: default
     {% endif %}
 
     <div id="news_section_vertical_container">
-        {% if site.categories['landreform'].size > 0 %}
-        <div class="news_section_landreform_block">
+        {% if site.categories['agrarianreform'].size > 0 %}
+        <div class="news_section_agrarianreform_block">
             <h1>Land Reform</h1>
             <div class="news_section">
-                {% for post in site.categories['landreform'] limit:3 %}
+                {% for post in site.categories['agrarianreform'] limit:3 %}
                     <div class="news_section_entry">
                         <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
                         <p class="excerpt">{{ post.excerpt }}</p>
