No bottom padding in news section

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -924,7 +924,7 @@ section.hub_column_main {
             }
             float: left;
             @include sidebar_component;
-
+            padding-bottom: 0px;
         }
         
         div.news_section_landreform_block,
