--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -13,8 +13,8 @@
 
 $font_serif:                Palatino, "Palatino Linotype", "Times New Roman", Georgia, Times, serif;
 $font_serif_thin:           "Liberation Serif", Palatino, "Palatino Linotype", "Times New Roman", Georgia, Times, serif;
-$font_sans:                 "Open Sans", Helvetica, "Lucida Sans", Arial, sans-serif;
-$font_sans_thin:            "Source Sans Pro", Helvetica, "Lucida Sans", Arial, sans-serif;
+$font_sans:                 "Open Sans", "Source Sans", "Lucida Sans", Helmet, Freesans, Helvetica, Arial, sans-serif;
+$font_sans_thin:            "Source Sans Pro", "Droid Sans", "Miriam Libre", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Helmet, Freesans, Helvetica, Arial, sans-serif;
 $font_monospace:            Consolas, Bitstream Vera Sans Mono, Lucida Console, "Courier New", "Courier", Terminal, monospace;
 
 // Title
@@ -31,7 +31,7 @@ $font_line_height_default:  15px;
 $font_default_thin:         $font_sans_thin;
 $font_size_default_thin:    12px;
 $font_heading:              $font_serif_thin;
-$font_size_heading:         24px;                   // Base of all heading tags
+$font_size_heading:         25px;                   // Base of all heading tags
 
 // Code
 $font_code:                 $font_monospace;
@@ -75,7 +75,7 @@ $font_size_label:               12px;
 
 // Sidebar
 $font_sidebar_entry_title:              $font_label;
-$font_size_sidebar_entry_title:         12px;
+$font_size_sidebar_entry_title:         11px;
 $font_line_height_sidebar_entry_title:  14px;
 $font_sidebar_entry_text:               $font_default;
 $font_size_sidebar_entry_text:          $font_size_default;
@@ -85,10 +85,10 @@ $font_line_height_sidebar_text:         $font_line_height_default;
 $font_announcement_title:               $font_sidebar_entry_title;
 $font_size_announcement_title:          $font_size_sidebar_entry_title;
 $font_line_height_announcement_title:   $font_line_height_sidebar_entry_title;
-$font_announcement_date:                $font_serif_thin;
+$font_announcement_date:                $font_default;
 $font_size_announcement_date:           $font_size_default;
 $font_line_height_announcement_date:    $font_line_height_default;
-$font_announcement_text:                $font_serif_thin;
+$font_announcement_text:                $font_default;
 $font_size_announcement_text:           $font_size_default;
 $font_line_height_announcement_text:    $font_line_height_default;
 
@@ -107,8 +107,8 @@ $font_page_title:               $font_heading;
 $font_size_page_title:          $font_size_heading;
 $font_line_height_page_title:   $font_size_heading;
 $font_page_text:                $font_default;
-$font_size_page_text:           $font_size_default + 3;
-$font_line_height_page_text:    $font_line_height_default + 5;
+$font_size_page_text:           $font_size_default + 6;
+$font_line_height_page_text:    $font_line_height_default + 12;
 $font_page_meta:                $font_page_text;
 $font_size_page_meta:           $font_size_default;
 $font_line_height_page_meta:    $font_size_default + 4;
@@ -156,5 +156,5 @@ $font_size_footer:          13px;
 $font_size_license:         13px;
 
 // Link buttons
-$font_button:               $font_sans;
-$font_size_button:          13px;
+$font_button:               $font_sans_thin;
+$font_size_button:          12px;
