--- a/_includes/post_left_sidebar.html
+++ b/_includes/post_left_sidebar.html
@@ -2,6 +2,7 @@
     <div id="nav_left">
         {% include common_menu_links.html %}
     </div>
-    {% include announcements.html %}
-    {% include news_bits.html %}
+    <div id="announcements_container">
+        {% include announcements.html %}
+    </div>
 </section>
