--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,9 @@ layout: default
 <section class="post_column_main">
 
     <h1>{{ page.title }}</h1>
+    {% comment %}
     {% if page.excerpt %}<p class="excerpt">{{ page.excerpt }}</p>{% endif %}
+    {% endcomment %}
     {% if page.date %}
         {% capture nowday  %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
         {% capture nowyear  %}{{ 'now' | date: '%Y' }}{% endcapture %}
